# gns3-snapshot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
gns3_snapshot/: __init__.py  gns3_snapshot.py
tests/: test_generator.py
